# hyperbolic

./: .gitignore  Cargo.toml  flake.nix
src/: 4,5-tiling.txt  camera.rs  lib.rs  main.rs  pipeline.rs  shader.wgsl  surface.rs  tiling.rs  window.rs
src/pipeline/: hyperboloid.wgsl  klein.wgsl  mod.rs
src/window/: desktop.rs
web/: index.html  main.js  style.css
