[package]
name = "hyperbolic"
version = "0.1.0"
edition = "2021"
resolver = "2"

[package.metadata.nix]
build = true
app = true

[dependencies]
wgpu = "0.14.2"
log = "0.4.17"
bytemuck = { version = "1.12.3", features = ["derive"] }
cgmath = "0.18.0"
parking_lot = "0.12.1"
raw-window-handle = "0.5.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_log = "0.2.0"
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
js-sys = "0.3.60"
web-sys = { version = "0.3.60", features = [
  "Document",
  "DomStringMap",
  "Element",
  "HtmlElement",
  "Window",
]}
wgpu = { version = "0.14.2", features = ["webgl"]}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10.0"
pollster = "0.2.5"
winit = { version = "0.27.5", default-features = false, features = ["x11", "wayland", "wayland-dlopen"] }

[profile.release]
opt-level = "s"
