[package]
name = "hyperbolic"
version = "0.1.0"
edition = "2021"
resolver = "2"

[package.metadata.nix]
build = true
app = true

[dependencies]
bytemuck = { version = "1.12.3", features = ["derive"] }
console_log = "0.2.0"
console_error_panic_hook = "0.1.7"
cgmath = "0.18.0"
js-sys = "0.3.60"
log = "0.4.17"
parking_lot = "0.12.1"
raw-window-handle = "0.5.0"
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
web-sys = { version = "0.3.60", features = [
  "Document",
  "DomStringMap",
  "Element",
  "HtmlElement",
  "Window",
]}
wgpu = { version = "0.14.2", features = ["webgl"]}

[profile.release]
opt-level = "s"
